# firebee

./: .gitignore  Cargo.toml  Makefile  POLICY.md  README.md  build.rs  cleanup.sh  example-policy.json  example-policy.yaml
.github/workflows/: ci.yml
src/: main.rs  state.rs
src/bpf/: firebee.bpf.c  firebee_common.h  firebee_egress.bpf.c  firebee_helpers.h  firebee_test.bpf.c  test_common.h
src/bpf_user/: handler.rs  loader.rs  maps.rs  mod.rs
src/dns/: cache.rs  mod.rs  monitor.rs  parser.rs
src/models/: rule.rs
src/policy/: mod.rs  parser.rs  validator.rs
src/ui/: app.rs  events.rs  mod.rs  widgets.rs
tests/: bpf_tests.rs
tests/common/: mod.rs
